--- a/main.html
+++ b/main.html
@@ -7,7 +7,10 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<div>
+		<p>My current favourite song is Bro slokam</p>
+		<a href="<https://www.youtube.com/watch?v=bnnF5Rr5VRw>">Bro slokam</a>
+	</div>
     <script type="text/javascript" src="./script.js">
 </script>
 
